# liblouis-table-editor

./: .gitignore  INSTALLER-LICENSE.txt  LICENSE  Liblouis Installation Guide.md  Makefile  Prerequisite - Liblouis Installation Guide.md  README.md  install.bat  linux-appimage-build.sh  pyproject.toml  requirements.txt  run.bat  setup.py  setup_postinstall.py  windows-build.py  windows-installer.iss
.pc/: applied-patches
.pc/accessibility-enhancements/: INSTALLER-LICENSE.txt
debian/: changelog  control  files  install  liblouis-table-editor.desktop  liblouis-table-editor.menu  liblouis-table-editor.xml  postinst  postrm
debian/patches/: accessibility-enhancements  update-help-dialogs
debian/source/: include-binaries
liblouis-win/include/liblouis/: liblouis.h
liblouis-win/lib/pkgconfig/: liblouis.pc
liblouis-win/share/info/: liblouis.info
liblouis/lib/: liblouis.la
src/: main.py  styles.qss  test.py
src/assets/data/: opcodes.json
src/components/: ButtonListItem.py  ButtonTextInput.py  HelpDialogs.py  Homepage.py  Menubar.py  TableEditor.py  TablePreview.py  TestCaseWidget.py  TestingWidget.py
src/components/AddEntry/: AddEntryWidget.py  BrailleInputWidget.py  EntryWidget.py  OpcodeSelector.py  UnicodeSelector.py
src/liblouis_table_editor/: __main__.py  config.py  styles.qss  test.py
src/liblouis_table_editor/components/: ButtonTextInput.py  HelpDialogs.py  Homepage.py  Menubar.py  TableEditor.py  TablePreview.py  TestCaseWidget.py  (+2 more)
src/tables/: test.cti
src/utils/: ApplyStyles.py  QtAsync.py  Toast.py  decrypt_utils.py  test.py  view.py
(+27 files in other folders)
