[project]
name = "liblouis-table-editor"
version = "0.1.0"
description = ""
authors = [
    {name = "github-actions[bot]",email = "nevernevernever69@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
